Revision history for {{$dist->name}}

{{$NEXT}}

1.001002 2014-08-21T05:38:29Z
 [Bugfix]
 - make sure build is in fact, always invoked when builder is required.

 [Dependencies::Stats]
 - Dependencies changed since 1.001001, see misc/*.deps* for details
 - develop: (suggests: ↑1)

1.001001 2014-08-18T23:05:17Z
 [Bugfix]
 - Not all versions of Data::DPath exist on <5.10, so if you happen to say "Ignore that" somehow the dpath related
   tests will instead TODOskip

 [Dependencies::Stats]
 - Dependencies changed since 1.001000, see misc/*.deps* for details
 - runtime: +1

1.001000 2014-08-18T21:14:28Z
 [00 Major]
 - add `dztest` function.
 - add `::dztest` package which has been floating around in various dists so far.

 [Dependencies::Stats]
 - Dependencies changed since 1.000003, see misc/*.deps* for details
 - develop: +2 ↑1 (suggests: ↑2)
 - runtime: +5 (recommends: +1)
 - test: -1

1.000003 2014-08-03T12:37:40Z
 [00 Trivial]
 - Migrate github links to org ( was advised in last release ... was wrong -_- )

 [Dependencies::Stats]
 - Dependencies changed since 1.000002, see misc/*.deps* for details
 - configure: ↓1
 - develop: (suggests: ↑1)
 - test: -4 (recommends: ↑1 -2)

1.000002 2014-07-25T06:22:28Z
 [00 Trivial]
 - Newer report versions script autoadded.

 [Dependencies::Stats]
 - Dependencies changed since 1.000001, see misc/*.deps* for details
 - develop: (suggests: ↑1)
 - test: +2 ↑1 (recommends: +1)

1.000001 2014-07-13T18:11:06Z
 [00 Trivial]
 - Minor packaging changes.

 [Dependencies::Stats]
 - Dependencies changed since 1.000000, see misc/*.deps* for details
 - configure: (recommends: ↑1)
 - develop: +3 -3 (suggests: +2 -1)
 - test: (recommends: ↑2)

1.000000 2014-02-02T07:19:39Z
 [00 Major]
 - Toolkit switched to EUMM
 - Toolkit deps softened to recommendations.
 - Version moved to mantissa = 6 ( primary reason for 0 → 1 )

 [Dependencies::Aggregate]
 - 5.008 : was 197 → 199 :(
 - 5.010 : was 178 → 184 :(
 - 5.019 : was 161 → 164 :(