@@ -198,3 +198,8 @@ Dist::Zilla::Plugin::Twitter = 0
 Dist::Zilla::Plugin::UploadToCPAN = 0
 
 [Prereqs]
+
+[Prereqs::Soften]
+to_relationship = recommends
+copy_to = develop.requires
+module = Test::Differences
