@@ -19,7 +19,8 @@ use Test::More qw( );
 use Path::Tiny qw(path);
 
 ## no critic (ValuesAndExpressions::ProhibitConstantPragma,ErrorHandling::RequireCheckingReturnValueOfEval,Subroutines::ProhibitSubroutinePrototypes)
-use constant CAN_DPATH => eval { require Data::DPath; 1 };
+use constant CAN_DPATH    => eval { require Data::DPath;       1 };
+use constant CAN_EQORDIFF => eval { require Test::Differences; 1 };
 sub dpath($);
 BEGIN { CAN_DPATH and Data::DPath->import('dpath') }
 ## use critic
@@ -97,7 +98,13 @@ sub _subtest_prereqs_deeply {
   my $meta = $self->distmeta;
   $self->tb->ok( defined $meta, 'distmeta defined' );
   $self->tb->note( $self->tb->explain( $meta->{prereqs} ) );
-  Test::More::is_deeply( $meta->{prereqs}, $prereqs, 'Prereqs match expected set' );
+
+  if (CAN_EQORDIFF) {
+    Test::Differences::eq_or_diff( $meta->{prereqs}, $prereqs, 'Prereqs match expected set' );
+  }
+  else {
+    Test::More::is_deeply( $meta->{prereqs}, $prereqs, 'Prereqs match expected set' );
+  }
   return;
 }
 
@@ -193,7 +200,12 @@ sub _subtest_meta_path_deeply {
   my (@results) = dpath($expression)->match( $self->builder->distmeta );
   $self->tb->ok( @results > 0, "distmeta matched expression $expression" );
   $self->tb->note( $self->tb->explain( \@results ) );
-  Test::More::is_deeply( \@results, $expected, 'distmeta matched expectations' );
+  if (CAN_EQORDIFF) {
+    Test::Differences::eq_or_diff( \@results, $expected, 'distmeta matched expectations' );
+  }
+  else {
+    Test::More::is_deeply( \@results, $expected, 'distmeta matched expectations' );
+  }
   return;
 }
 
@@ -457,7 +469,7 @@ __PACKAGE__->meta->make_immutable;
 
 =begin Pod::Coverage
 
-CAN_DPATH build
+CAN_DPATH build CAN_EQORDIFF
 
 =end Pod::Coverage
 
