@@ -1,6 +1,6 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
-1.001003
+1.002000
 
 1.001002 2014-08-21T05:38:29Z
 
