@@ -1,6 +1,13 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+ [00 Minor]
+ - Prefer Test::Differences everywhere it is possible.
+
+ [Dependencies::Stats]
+ - Dependencies changed since 1.001002, see misc/*.deps* for details
+ - develop: +1
+ - runtime: (recommends: +1)
 
 1.001002 2014-08-21T05:38:29Z
  [Bugfix]
